# aoc

./: .gitignore
2019/: InputAdapter.js  InputAdapter.ts  IntComputer.js  IntComputer.ts  OutputAdapter.js  OutputAdapter.ts
2019/1/: fuel.js  fuel.ts
2019/2/: intCodeAdd.js  intCodeAdd.ts
2019/3/: wires.js  wires.ts
2019/4/: password.js  password.ts
2019/5/: test.js  test.ts
2019/6/: orbits.js  orbits.ts
2019/7/: amplifier.js  amplifier.ts
2020/1/: reportRepair.js  reportRepair.ts
2020/10/: jolts.js  jolts.ts
2020/11/: ferrySeats.js  ferrySeats.ts
2020/12/: ferryNav.js  ferryNav.ts
2020/13/: busTimes.js  busTimes.ts
2020/2/: passwords.js  passwords.ts
2020/3/: sledMap.js  sledMap.ts
2020/4/: passports.js  passports.ts
2020/5/: boardingPass.js  boardingPass.ts
2020/6/: customs.js  customs.ts
2020/7/: bags.js  bags.ts
2020/8/: assembly.js  assembly.ts
2020/9/: xmasCracker.js  xmasCracker.ts
2021/01/: increase.js  increase.ts
2021/02/: sub.js  sub.ts
2021/03/: diag.js  diag.ts
2021/04/: bingo.js  bingo.ts  package-lock.json
2021/06/: fish.js  fish.ts
2021/07/: crab.js  crab.ts
2024/: CMakeLists.txt  main.cc  runner
2024/01/: CMakeLists.txt  d01.cc  main.cc
2024/02/: d02.h  main.cc
2024/03/: d03.cc
2024/04/: d04.cc  d04.h
2024/06/: d06.cc
2024/days/: d01.cc  d01.h  d02.cc  d03.cc  d03.h  d04.cc  d05.cc  d05.h  d06.cc  d06.h  d07.cc  d07.h  d08.cc  d08.h  d09.cc  d09.h  d10.cc  d10.h  d11.cc  d11.h  d12.cc  d12.h  d13.cc  d13.h  d14.cc  d14.h  d15.cc  d15.h  d16.cc  d16.h  d17.cc  d17.h  d18.cc  d18.h  d19.cc  d19.h  days.h
2025/: Cargo.toml
cpp/: frequency_counter.h  grid.h  parse.h
(+44 files in other folders)
